updated context processor

--- a/templates/base.html
+++ b/templates/base.html
@@ -103,13 +103,13 @@
               </div>
             </li>
             <li class="list-inline-item dropdown">
-              <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-dark{% endif %} nav-link"
+              <a class="{% if grand_total %}text-success font-weight-bold{% else %}text-dark{% endif %} nav-link"
                 href="{% url 'view_bag' %}">
                 <div class="text-center">
                   <div>
                     <i class="fas fa-shopping-bag fa-lg"></i>
                   </div>
-                  <p class="my-0">
+                  <p class="my-0 grand-total-position">
                     {% if grand_total %}
                     £{{ grand_total|floatformat:2 }}
                     {% else %}
