--- a/static/css/base.css
+++ b/static/css/base.css
@@ -10,6 +10,11 @@ body {
   font-family: "Montserrat", sans-serif;
 }
 
+.grand-total-position {
+    position: absolute;
+    right: 0;
+    left: -10px;
+}
 
 .alert-container .col-12 {
     padding-left: 0;
