--- a/static/css/base.css
+++ b/static/css/base.css
@@ -10,10 +10,13 @@ body {
   font-family: "Montserrat", sans-serif;
 }
 
+.mobile-scroll {
+    max-height: 100%;
+    overflow-y: scroll;
+}
+
 .grand-total-position {
     position: absolute;
-    right: 0;
-    left: -10px;
 }
 
 .alert-container .col-12 {
