--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,7 @@
   <header class="container-fluid fixed-top alert-container">
     {% block page_alert %}
     {% endblock %}
-
+    
     <div id="topnav" class="row bg-white pt-lg-2 d-flex">
 
       <div class="col-sm-8 col-6 pt-1 pt-lg-0 d-flex flex-column justify-content-between">
@@ -79,6 +79,25 @@
                 {% endif %}
               </div>
             </li>
+            <li class="list-inline-item dropdown">
+              <a class="{% if grand_total %}text-success font-weight-bold{% else %}text-dark{% endif %} nav-link"
+                href="{% url 'view_bag' %}">
+                <div class="text-center">
+                  <div>
+                    <i class="fas fa-shopping-bag fa-lg"></i>
+                  </div>
+                  <div class="d-flex justify-content-center">
+                  <p class="my-0 grand-total-position">
+                    {% if grand_total %}
+                    £{{ grand_total|floatformat:2 }}
+                    {% else %}
+
+                    {% endif %}
+                  </p>
+                  </div>
+                </div>
+              </a>
+            </li>
             <li class="list-inline-item dropdown" data-toggle="tooltip" data-placement="bottom" title="Accounts">
               <a class="nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true"
                 aria-expanded="false">
@@ -102,23 +121,7 @@
                 {% endif %}
               </div>
             </li>
-            <li class="list-inline-item dropdown">
-              <a class="{% if grand_total %}text-success font-weight-bold{% else %}text-dark{% endif %} nav-link"
-                href="{% url 'view_bag' %}">
-                <div class="text-center">
-                  <div>
-                    <i class="fas fa-shopping-bag fa-lg"></i>
-                  </div>
-                  <p class="my-0 grand-total-position">
-                    {% if grand_total %}
-                    £{{ grand_total|floatformat:2 }}
-                    {% else %}
-
-                    {% endif %}
-                  </p>
-                </div>
-              </a>
-            </li>
+            
           </ul>
         </div>
         <div class="row mx-lg-auto">
