--- a/store_bag/templates/store_bag/bag.html
+++ b/store_bag/templates/store_bag/bag.html
@@ -19,53 +19,9 @@
     </div>
 
     <div class="row">
-        <div class="col">
+        <div id="bag-parent" class="col">
             {% if bag_items %}
-           
-            <div class="">
-                <div class="row">
-                    <div class="col">
-                        {% include "store_bag/bag-total.html" %}
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        {% include "store_bag/checkout-buttons.html" %}
-                        <p class="text-muted mb-5">A summary of your bag contents is below</p>
-                    </div>
-                </div>
-                {% for item in bag_items %}
-                <div class="row">
-                    <div class="col-12 col-sm-6 mb-2">
-                        {% include "store_bag/product-image.html" %}
-                    </div>
-                    <div class="col-12 col-sm-6 mb-2">
-                        {% include "store_bag/product-info.html" %}
-                    </div>
-                    <div class="col-12 col-sm-6 order-sm-last">
-                        <p class="my-0">Price Each: £{{ item.product.price }}</p>
-                        <p><strong>Subtotal: </strong>£{{ item.product.price | calc_subtotal:item.quantity }}</p>
-                    </div>
-                    <div class="col-12 col-sm-6">
-                        {% include "store_bag/quantity-form.html" %}
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        <hr>
-                    </div>
-                </div>
-                {% endfor %}
-                <div class="d-flex justify-content-end">
-                    <div class="btt-button shadow-sm btn-dark">
-                        <a class="btt-link d-flex text-white h-100 text-decoration-none">
-                            <i class="fas fa-arrow-up mx-auto my-auto"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            
-            <div class="table-responsive rounded">
+            <div id="desktop-bag" class="table-responsive rounded">
                 <table class="table table-sm table-borderless">
                     <thead class="text-black">
                         <tr>
@@ -110,6 +66,48 @@
                 </table>
             </div>
             
+            <div id="mobile-bag" class="">
+                <div class="row">
+                    <div class="col">
+                        {% include "store_bag/bag-total.html" %}
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        {% include "store_bag/checkout-buttons.html" %}
+                        <p class="text-muted mb-5">A summary of your bag contents is below</p>
+                    </div>
+                </div>
+                {% for item in bag_items %}
+                <div class="row">
+                    <div class="col-12 col-sm-6 mb-2">
+                        {% include "store_bag/product-image.html" %}
+                    </div>
+                    <div class="col-12 col-sm-6 mb-2">
+                        {% include "store_bag/product-info.html" %}
+                    </div>
+                    <div class="col-12 col-sm-6 order-sm-last">
+                        <p class="my-0">Price Each: £{{ item.product.price }}</p>
+                        <p><strong>Subtotal: </strong>£{{ item.product.price | calc_subtotal:item.quantity }}</p>
+                    </div>
+                    <div class="col-12 col-sm-6">
+                        {% include "store_bag/quantity-form.html" %}
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <hr>
+                    </div>
+                </div>
+                {% endfor %}
+                <div class="d-flex justify-content-end">
+                    <div class="btt-button shadow-sm btn-dark">
+                        <a class="btt-link d-flex text-white h-100 text-decoration-none">
+                            <i class="fas fa-arrow-up mx-auto my-auto"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
             {% else %}
             <p class="lead mb-5">Your bag is empty.</p>
             <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
