--- a/store_bag/templates/store_bag/quantity-form.html
+++ b/store_bag/templates/store_bag/quantity-form.html
@@ -11,9 +11,9 @@
                 </button>
             </div>
             <input class="form-control form-control-sm qty_input" type="number"
-                name="quantity" value="{{ item.quantity }}" min="1" max="99"
+                 min="1" max="99" name="quantity" value="{{ item.quantity }}"
                 data-item_id="{{ item.item_id }}"
-                id="id_qty_{{ item.item_id }}">
+                id="id_qty_{{ item.item_id }}" oninput="this.value = !!this.value && Math.abs(this.value) > 0 ? Math.abs(this.value) : null">
             <div class="input-group-append">
                 <button class="increment-qty btn btn-sm btn-black rounded-0"
                     data-item_id="{{ item.item_id }}" id="increment-qty_{{ item.item_id }}">
