added djanog user agents module to find users device so to display the correct shopping bag / fixes js issue on quanitty

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -216,10 +216,9 @@
 
 {% block postloadjs %}
 {{ block.super }}
+<script src="{% static 'js/btt.js' %}"></script>
 <script type="text/javascript">
-    $('.btt-link').click(function (e) {
-        window.scrollTo(0, 0)
-    })
+   
     $('#sort-selector').change(function () {
         let selector = $(this);
         let currentUrl = new URL(window.location);
