--- a/products/templates/products/product_details.html
+++ b/products/templates/products/product_details.html
@@ -9,87 +9,80 @@
 {% block content %}
 <div class="overlay container"></div>
 <div class="container store-header-margin">
-        <div class="row">
-            <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
-                <div class="image-container my-5">
-                    {% if product.image1 %}
-                        <a href="{{ product.image1_url }}" target="_blank">
-                            <img class="card-img-top img-fluid" src="{{ product.image1_url }}" alt="{{ product.name }}">
-                        </a>
-                        {% else %}
-                        <a href="">
-                            <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
-                        </a>
-                    {% endif %}
-                </div>
-            </div>
-            <div class="col-12 col-md-6 col-lg-4">
-                <div class="product-details-container mb-5 mt-md-5">
-                    <p class="mb-0">{{ product.name }}</p>
-                    <p class="lead mb-0 text-left font-weight-bold">£{{ product.price }}</p>
-                    <p class="mt-3">{{ product.description|linebreaks }}</p>
-                <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
-                        {% csrf_token %}
-                        <div class="form-row">
-                            {% with product.has_sizes as s %}
-                            {% if s %}
-                                <div class="col-12">
-                                    <p><strong>Size:</strong></p>
-                                    <select class="form-control rounded-0 w-50" name="product_size" id="id_product_size">
-                                        <option value="18" selected>18mm</option>
-                                        <option value="14">14mm</option>
-                                    </select>
-                                </div>
-                            {% endif %}
-                            <div class="col-12">
-                                <p class="mt-3"><strong>Quantity:</strong></p>
-                                <div class="form-group w-50">
-                                    <div class="input-group">
-                                        <div class="input-group-prepend">
-                                            <button class="decrement-qty btn btn-black rounded-0" 
-                                                data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
-                                                <span class="icon">
-                                                    <i class="fas fa-minus"></i>
-                                                </span>
-                                            </button>
-                                        </div>
-                                        <input class="form-control qty_input" type="number"
-                                            name="quantity" value="1" min="1" max="99"
-                                            data-item_id="{{ product.id }}"
-                                            id="id_qty_{{ product.id }}" oninput="this.value = !!this.value && Math.abs(this.value) > 0 ? Math.abs(this.value) : null">
-                                        <div class="input-group-append">
-                                            <button class="increment-qty btn btn-black rounded-0"
-                                                data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
-                                                <span class="icon">
-                                                    <i class="fas fa-plus"></i>
-                                                </span>
-                                            </button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="col{% if sizes %}-12 mt-2{% endif %}">
-                                <a href="{% url 'products' %}" class="btn mt-5">
-                                    <span class="icon">
-                                        <i class="fas fa-chevron-left"></i>
-                                    </span>
-                                    <span class="text-uppercase">Keep Shopping</span>
-                                </a>
-                                <input type="submit" class="btn btn-dark rounded-0 text-uppercase mt-5" value="Add to Bag">
-                            </div>
-                            <input type="hidden" name="redirect_url" value="{{ request.path }}">
-                            {% endwith %}
-
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
+  <div class="row">
+    <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
+      <div class="image-container my-5">
+        {% if product.image1 %}
+        <a href="{{ product.image1_url }}" target="_blank">
+          <img class="card-img-top img-fluid" src="{{ product.image1_url }}" alt="{{ product.name }}">
+        </a>
+        {% else %}
+        <a href="">
+          <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
+        </a>
+        {% endif %}
+      </div>
     </div>
+    <div class="col-12 col-md-6 col-lg-4">
+      <div class="product-details-container mb-5 mt-md-5">
+        {% if 'boxes' in product.category|stringformat:"s"  %}
+
+        <p class="mb-0">{{ product.size }}</p>
+        {% endif %}
+        <p class="mb-0">{{ product.name }}</p>
+        <p class="lead mb-0 text-left font-weight-bold">£{{ product.price }}</p>
+        <p class="mt-3">{{ product.description|linebreaks }}</p>
+        <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
+          {% csrf_token %}
+          <div class="form-row">
+            <div class="col-12">
+              <p class="mt-3"><strong>Quantity:</strong></p>
+              <div class="form-group w-50">
+                <div class="input-group">
+                  <div class="input-group-prepend">
+                    <button class="decrement-qty btn btn-black rounded-0" data-item_id="{{ product.id }}"
+                      id="decrement-qty_{{ product.id }}">
+                      <span class="icon">
+                        <i class="fas fa-minus"></i>
+                      </span>
+                    </button>
+                  </div>
+                  <input class="form-control qty_input" type="number" name="quantity" value="1" min="1" max="99"
+                    data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}"
+                    oninput="this.value = !!this.value && Math.abs(this.value) > 0 ? Math.abs(this.value) : null">
+                  <div class="input-group-append">
+                    <button class="increment-qty btn btn-black rounded-0" data-item_id="{{ product.id }}"
+                      id="increment-qty_{{ product.id }}">
+                      <span class="icon">
+                        <i class="fas fa-plus"></i>
+                      </span>
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col{% if sizes %}-12 mt-2{% endif %}">
+              <a href="{% url 'products' %}" class="btn mt-5">
+                <span class="icon">
+                  <i class="fas fa-chevron-left"></i>
+                </span>
+                <span class="text-uppercase">Keep Shopping</span>
+              </a>
+              <input type="submit" class="btn btn-dark rounded-0 text-uppercase mt-5" value="Add to Bag">
+            </div>
+            <input type="hidden" name="redirect_url" value="{{ request.path }}">
+
+
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
 
 {% block postloadjs %}
-    {{ block.super }}
-    <script src="{% static 'js/quantity_input_script.js' %}"></script>
+{{ block.super }}
+<script src="{% static 'js/quantity_input_script.js' %}"></script>
 {% endblock %}
