--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,7 @@
   <header class="container-fluid fixed-top alert-container">
     {% block page_alert %}
     {% endblock %}
-    
+
     <div id="topnav" class="row bg-white pt-lg-2 d-flex">
 
       <div class="col-sm-8 col-6 pt-1 pt-lg-0 d-flex flex-column justify-content-between">
@@ -87,13 +87,13 @@
                     <i class="fas fa-shopping-bag fa-lg"></i>
                   </div>
                   <div class="d-flex justify-content-center">
-                  <p class="my-0 grand-total-position">
-                    {% if grand_total %}
-                    £{{ grand_total|floatformat:2 }}
-                    {% else %}
+                    <p class="my-0 grand-total-position">
+                      {% if grand_total %}
+                      £{{ grand_total|floatformat:2 }}
+                      {% else %}
 
-                    {% endif %}
-                  </p>
+                      {% endif %}
+                    </p>
                   </div>
                 </div>
               </a>
@@ -121,7 +121,7 @@
                 {% endif %}
               </div>
             </li>
-            
+
           </ul>
         </div>
         <div class="row mx-lg-auto">
@@ -149,7 +149,22 @@
   </header>
 
   {% if messages %}
-  <div class="message-container"></div>
+  <div class="message-container">
+    {% for message in messages %}
+    {% with message.level as level %}
+    {% if level == 40 %}
+    {% include 'includes/toasts/toast_error.html' %}
+    {% elif level == 30 %}
+    {% include 'includes/toasts/toast_warning.html' %}
+    {% elif level == 25 %}
+    {% include 'includes/toasts/toast_success.html' %}
+    {% else %}
+    {% include 'includes/toasts/toast_info.html' %}
+    {% endif %}
+    {% endwith %}
+    {% endfor %}
+
+  </div>
   {% endif %}
 
   {% block content %}
@@ -157,6 +172,9 @@
 
   {% block postloadjs %}
   <script>
+    
+    $('.toast').toast('show');
+    
     $(function () {
       $('[data-toggle="tooltip"]').tooltip()
     })
