added forms, admin and signals

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
-{% load static %}
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 
 <head>
@@ -98,7 +98,7 @@
                 </div>
               </a>
             </li>
-            <li class="list-inline-item dropdown" data-toggle="tooltip" data-placement="bottom" title="Accounts">
+            <li class="list-inline-item dropdown">
               <a class="nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true"
                 aria-expanded="false">
                 <div class="text-center text-dark">
@@ -124,7 +124,7 @@
 
           </ul>
         </div>
-        <div class="row mx-lg-auto">
+        <div class="row mx-lg-auto nav-line-height">
           <nav class="navbar navbar-light navbar-expand-lg navbar-light ">
             <button id="main-nav-btn" class="navbar-toggler" type="button" data-toggle="collapse"
               data-target="#main-nav,#store-nav" aria-controls="main-nav" aria-expanded="false"
