--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -62,9 +62,10 @@
       <h2 class="logo-font">Categories</h2>
 
       {% endif %}
-
+      
       {% url 'products' as the_url %}
-      {% if request.get_full_path == the_url %}
+      
+      {% if the_url in request.get_full_path %}
 
       <h2 class="logo-font">Products</h2>
 
