--- a/static/css/base.css
+++ b/static/css/base.css
@@ -10,9 +10,11 @@ body {
   font-family: "Montserrat", sans-serif;
 }
 
-.mobile-scroll {
-    max-height: 100%;
-    overflow-y: scroll;
+.navbar-light .navbar-toggler,
+.navbar-light .navbar-toggler:focus {
+    color: rgba(0,0,0,.5);
+    border-color: transparent;
+    outline: unset;
 }
 
 .grand-total-position {
@@ -71,7 +73,7 @@ body {
 
 button#main-nav-btn.navbar-toggler {
   z-index: 1;
-  margin-top: 13px;
+  margin-top: 16px;
 }
 
 .navbar.navbar-expand-lg.navbar-dark {
@@ -332,11 +334,15 @@ button#main-nav-btn.navbar-toggler {
     height: calc(1.20em + .45rem + 2px);
     margin-top: 5px;
     padding: .125rem .65rem;
+  }
 }
 
 @media (max-width: 992px) {
   .header-container {
     margin-top: 130px;
+}
+.nav-line-height {
+    line-height: 0.6rem;
 }
 }
 
