--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% load i18n %}
-
+{% load account socialaccount %}
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block content %}
@@ -20,5 +20,24 @@
         {% endif %}
         <button type="submit">{% trans "Sign Up" %} &raquo;</button>
     </form>
+    {% get_providers as socialaccount_providers %}
+
+    {% if socialaccount_providers %}
+    <p>{% blocktrans with site.name as site_name %}Or sign in with Facebook.{% endblocktrans %}</p>
+
+    <div class="socialaccount_ballot">
+
+        <ul class="socialaccount_providers">
+            {% include "socialaccount/snippets/provider_list.html" with process="login" %}
+        </ul>
+
+        <div class="login-or">{% trans 'or' %}</div>
+
+    </div>
+
+    {% include "socialaccount/snippets/login_extra.html" %}
+
+    {% endif %}
+    
 </div>
 {% endblock %}
