--- a/store_bag/templates/store_bag/checkout-buttons.html
+++ b/store_bag/templates/store_bag/checkout-buttons.html
@@ -4,7 +4,7 @@
     </span>
     <span class="text-uppercase">Keep Shopping</span>
 </a>
-<a href="" class="btn rounded-0 btn-md">
+<a href="{% url 'checkout' %}" class="btn rounded-0 btn-md">
     <span class="text-uppercase">Secure Checkout</span>
     <span class="icon">
         <i class="fas fa-lock"></i>
