--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 {% load static %}
 {% load bag_tools %}
-
+{% block extra_css %}
+    <link rel="stylesheet" href="{% static 'checkout/css/checkout.css' %}">
+{% endblock %}
 
 
 {% block page_header %}
