--- a/static/css/base.css
+++ b/static/css/base.css
@@ -5,7 +5,7 @@ html {
 body {
   background: url("/media/apcbg2.jpg") no-repeat center center fixed;
   background-size: cover;
-  height: 100vh;
+  height: calc(100vh - 200px);
   color: #555;
   font-family: "Montserrat", sans-serif;
 }
