--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -1,12 +1,10 @@
-{% extends "base.html" %}
-
+{% extends "account/base.html" %}
 {% load i18n %}
 
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
-{% block content %}
-<div class="overlay container"></div>
-<div class="container header-container">
+{% block inner_content %}
+
     <h1>{% trans "Sign Out" %}</h1>
 
     <p>{% trans 'Are you sure you want to sign out?' %}</p>
@@ -18,7 +16,5 @@
         {% endif %}
         <button type="submit">{% trans 'Sign Out' %}</button>
     </form>
-</div>
-
 
 {% endblock %}
