--- a/templates/allauth/account/password_set.html
+++ b/templates/allauth/account/password_set.html
@@ -1,9 +1,9 @@
-{% extends "base.html" %}
+{% extends "account/base.html" %}
 {% load i18n %}
 
 {% block head_title %}{% trans "Set Password" %}{% endblock %}
 
-{% block content %}
+{% block inner_content %}
     <h1>{% trans "Set Password" %}</h1>
 
     <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
