added stripe elements, added crsf token to bag meta data

--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -31,7 +31,9 @@
 }
 
 #payment-form .form-control,
-#card-element {
+#card-number-element,
+#card-expiry-element,
+#card-cvc-element {
     color: #000;
     border: 1px solid #000;
 }
