--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -104,15 +104,19 @@
           <!-- A Stripe card element will go here -->
 
           <div class="mb-3" id="card-number-element"></div>
-          <div class="d-flex justify-content-between">
-            <div class="mb-3 col-3" id="card-expiry-element"></div>
-            <div class="mb-3 col-3" id="card-cvc-element"></div>
-            <div class="form-group col-3" id="card-postcode-element">
+          <div class="row">
+            <div class="col-6">
+              <div class="mb-3" id="card-expiry-element"></div>
+            </div>
+            <div class="col-6">
+              <div class="mb-3" id="card-cvc-element"></div>
+            </div>
+
+          </div>
+          <div class="mb-3" id="card-postcode-element">
             <input type="text" name="postcode" maxlength="20" placeholder="Postcode Registered to Card"
-              class="stripe-style-input textinput textInput form-control" id="card-postcode-input" required>
+              class="stripe-style-input textinput form-control" id="card-postcode-input" required>
           </div>
-          </div>
-          
           <!-- Used to display form errors -->
           <div class="mb-3 text-danger" id="card-errors" role="alert"></div>
         </fieldset>
