--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -22,28 +22,88 @@
 }
 
 .stripe-style-input::placeholder {
-    color: #aab7c4;
+  color: #aab7c4;
 }
 
 .fieldset-label {
-    position: relative;
-    right: .5rem;
+  position: relative;
+  right: .5rem;
 }
 
 #payment-form .form-control,
 #card-number-element,
 #card-expiry-element,
 #card-cvc-element {
-    color: #000;
-    border: 1px solid #000;
+  color: #000;
+  border: 1px solid #000;
 }
 
 select,
 select option {
-    color: #000;
+  color: #000;
 }
 
 select:invalid,
 select option[value=""] {
-    color: #aab7c4 !important;
+  color: #aab7c4 !important;
+}
+
+#loading-overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(57, 149, 74, .85);
+  z-index: 9999;
+}
+
+.wrapper {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.circle {
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  background-color: #013e7f;
+  border-radius: 50%;
+  animation: loading 1.5s cubic-bezier(.8, .5, .2, 1.4) infinite;
+  transform-origin: bottom center;
+  position: relative;
+}
+
+@keyframes loading {
+  0% {
+    transform: translateY(0px);
+    background-color: #013e7f;
+  }
+  50% {
+    transform: translateY(50px);
+    background-color: #395879;
+  }
+  100% {
+    transform: translateY(0px);
+    background-color: #013e7f;
+  }
+}
+
+.circle-1 {
+  animation-delay: 0.1s;
+}
+
+.circle-2 {
+  animation-delay: 0.2s;
+}
+
+.circle-3 {
+  animation-delay: 0.3s;
+}
+
+.circle-4 {
+  animation-delay: 0.4s;
 }
