--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -114,7 +114,7 @@
             </div>
             <div class="col-7">
               <div class="mb-3" id="card-postcode-element">
-                <input type="text" name="postcode" maxlength="20" placeholder="Postcode Registered to Card"
+                <input type="text" name="postalcode" maxlength="20" placeholder="Postcode Registered to Card"
                   class="stripe-style-input textinput form-control" id="card-postcode-input" required>
               </div>
             </div>
