--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -33,7 +33,8 @@
 #payment-form .form-control,
 #card-number-element,
 #card-expiry-element,
-#card-cvc-element {
+#card-cvc-element,
+#contact-form .form-control {
   color: #000;
   border: 1px solid #000;
 }
