--- a/templates/base.html
+++ b/templates/base.html
@@ -58,7 +58,7 @@
         <div class="px-1 row">
           <ul class="list-inline list-unstyled text-left my-0 small-links">
             <li class="list-inline-item">
-              <a class="nav-link" data-toggle="tooltip" data-placement="bottom" title="Contact Us" href="#">
+              <a class="nav-link" data-toggle="tooltip" data-placement="bottom" title="Contact Us" href="{% url 'contact' %}">
                 <div class="text-center text-dark">
                   <div><i class="fas fa-envelope fa-lg"></i></div>
                 </div>
