--- a/templates/allauth/socialaccount/snippets/login_extra.html
+++ b/templates/allauth/socialaccount/snippets/login_extra.html
@@ -1,3 +1,3 @@
 {% load socialaccount %}
 {% providers_media_js %}
-<a href="{% provider_login_url "facebook" method="js_sdk" %}">Facebook Connect</a>
+<a class="fb-login-button" href="{% provider_login_url "facebook" method="js_sdk" %}">Connect with Facebook</a>
