--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -11,7 +11,7 @@
   <div class="row">
     <div class="col text-center mt-3">
                 <hr>
-                <h2 class="logo-font mb-4">My Profile</h2>
+                <h2 class="logo-font mb-4">{{profile}}'s Profile</h2>
                 <hr>
             </div>
         </div>
@@ -21,6 +21,7 @@
                 <div class="order-history table-responsive">
                     <table class="table table-sm table-borderless">
                         <thead>
+                          {{request.session.user}}
                             <tr>
                                 <th>Order Number</th>
                                 <th>Date</th>
