--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -6,20 +6,33 @@
 {% block head_title %}{% trans "Sign Up" %}{% endblock %}
 
 {% block inner_content %}
-    <h1>{% trans "Sign Up" %}</h1>
+<h1>{% trans "Sign Up" %}</h1>
+{% get_providers as socialaccount_providers %} 
 
-    <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}
-    </p>
+<p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}
+</p>
 
-    <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
-        {% csrf_token %}
-        {{ form|crispy }}
-        {% if redirect_field_value %}
-        <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-        {% endif %}
-        <a class="btn btn-outline-black rounded-0" href="{% url 'account_login' %}">Back to Login</a>
-        <button type="submit">{% trans "Sign Up" %}</button>
-    </form>
+{% if socialaccount_providers %}
+<p>{% blocktrans with site.name as site_name %}Please sign up with Google Or Facebook. Else, sign up
+  for a {{ site_name }} account and sign up below:{% endblocktrans %}</p>
+
+<div class="socialaccount_ballot mb-3">
+
+  {% include "socialaccount/snippets/provider_list.html" with process="login" %}
+
+</div>
+
+{% endif %}
+
+<form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
+  {% csrf_token %}
+  {{ form|crispy }}
+  {% if redirect_field_value %}
+  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+  {% endif %}
+  <a class="btn btn-outline-black rounded-0" href="{% url 'account_login' %}">Back to Login</a>
+  <button type="submit">{% trans "Sign Up" %}</button>
+</form>
 
 
 {% endblock %}
