--- a/templates/allauth/socialaccount/snippets/login_extra.html
+++ b/templates/allauth/socialaccount/snippets/login_extra.html
@@ -1,3 +1,7 @@
 {% load socialaccount %}
 {% providers_media_js %}
-<a class="fb-login-button" href="{% provider_login_url "facebook" method="js_sdk" %}">Connect with Facebook</a>
+<a href="{% provider_login_url "facebook" method="js_sdk" %}"
+  class="btn btn-block btn-social btn-facebook text-white text-center rounded-0">
+  <span class="fa fa-facebook"></span>
+  Sign in with Facebook
+</a>
