--- a/templates/allauth/socialaccount/snippets/provider_list.html
+++ b/templates/allauth/socialaccount/snippets/provider_list.html
@@ -3,18 +3,19 @@
 {% get_providers as socialaccount_providers %}
 
 {% for provider in socialaccount_providers %}
+{% providers_media_js %}
 {% if provider.id == "openid" %}
 {% for brand in provider.get_brands %}
 <li>
-  <a title="{{brand.name}}" 
-     class="socialaccount_provider {{provider.id}} {{brand.id}}" 
-     href="{% provider_login_url provider.id openid=brand.openid_url process=process %}"
-     >{{brand.name}}</a>
+  <a title="{{brand.name}}" class="socialaccount_provider {{provider.id}} {{brand.id}}"
+    href="{% provider_login_url provider.id openid=brand.openid_url process=process %}">{{brand.name}}</a>
 </li>
 {% endfor %}
 {% endif %}
 <li class="list-unstyled">
-  <a title="{{provider.name}}" class=" fb-login-button socialaccount_provider {{provider.id}}" 
-     href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}">{{provider.name}}</a>
+  <a title="{{provider.name}}"
+    class="socialaccount_provider {{provider.id}} btn btn-block btn-social btn-{{provider.name|lower}} text-white text-center rounded-0"
+    href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}"><span
+      class="fa fa-{{provider.name|lower}}"></span>Sign In With {{provider.name}}</a>
 </li>
 {% endfor %}
