--- a/products/templates/products/product_details.html
+++ b/products/templates/products/product_details.html
@@ -31,6 +31,12 @@
         {% endif %}
         <p class="mb-0">{{ product.name }}</p>
         <p class="lead mb-0 text-left font-weight-bold">£{{ product.price }}</p>
+        {% if request.user.is_superuser %}
+        <small class="ml-3">
+          <a href="{% url 'edit_product' product.id %}">Edit</a> |
+          
+        </small>
+        {% endif %}
         <p class="mt-3">{{ product.description|linebreaks }}</p>
         <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
           {% csrf_token %}
