--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -53,7 +53,7 @@
     </div>
   </div>
   {% endif %}
-  <div class="row">
+  <div class="row d-flex flex-column">
     <div class="col text-center mt-3">
 
       {% url 'store_home' as the_url %}
