--- a/products/templates/products/product_details.html
+++ b/products/templates/products/product_details.html
@@ -32,9 +32,9 @@
         <p class="mb-0">{{ product.name }}</p>
         <p class="lead mb-0 text-left font-weight-bold">£{{ product.price }}</p>
         {% if request.user.is_superuser %}
-        <small class="ml-3">
-          <a href="{% url 'edit_product' product.id %}">Edit</a> |
-          
+        <small class="">
+          <a href="{% url 'edit_product' product.id %}"><i class="far fa-edit"></i></a> |
+          <a class="text-danger" href="{% url 'delete_product' product.id %}"><i class="far fa-trash-alt"></i></a>
         </small>
         {% endif %}
         <p class="mt-3">{{ product.description|linebreaks }}</p>
