update stock when user purchases items - webhook handler

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -10,6 +10,17 @@ body {
   font-family: "Montserrat", sans-serif;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    /* display: none; <- Crashes Chrome on hover */
+    -webkit-appearance: none;
+    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+}
+
+input[type=number] {
+    -moz-appearance:textfield; /* Firefox */
+}
+
 .navbar-light .navbar-toggler,
 .navbar-light .navbar-toggler:focus {
     color: rgba(0,0,0,.5);
