--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -18,6 +18,7 @@
     <div class="col">
       <hr>
       <h2 class="logo-font mb-4">Checkout</h2>
+      {{bag_items}}
       <hr>
     </div>
   </div>
