--- a/products/templates/products/product_details.html
+++ b/products/templates/products/product_details.html
@@ -66,6 +66,10 @@
                   </div>
                 </div>
               </div>
+              {% if product.stock <= 5 %}
+
+              <p class="text-danger small font-weight-bold">Hurry Only {{product.stock}} Left!</p>
+              {% endif %}
             </div>
 
             <div class="col{% if sizes %}-12 mt-2{% endif %}">
