added map and contact info to contact page

--- a/contact_form/templates/contact_form/contact_form.html
+++ b/contact_form/templates/contact_form/contact_form.html
@@ -4,6 +4,9 @@
 {% block extra_css %}
 <link rel="stylesheet" href="{% static 'checkout/css/checkout.css' %}">
 {% endblock %}
+{% block extra_js %}
+<script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+{% endblock %}
 
 {% block content %}
 <div class="overlay container"></div>
@@ -14,30 +17,50 @@
       <hr class="w-50 mb-1">
     </div>
   </div>
+  <div class="row" height="500">
 
-  <form method="POST" id="contact-form" class="mt-5">
-    {% csrf_token %}
-    <div class="row">
-      <div class="col-md-7 text-center mx-5">
+    <div class="col-lg-6">
+      <form method="POST" id="contact-form" class="mt-5">
+        {% csrf_token %}
 
-        {{ form.from_email | as_crispy_field }}
-      </div>
-      <div class="col-md-7 text-center mx-5">
-        {{ form.subject | as_crispy_field }}
-      </div>
-      <div class="col-md-8 text-center mx-5">
-        {{ form.message | as_crispy_field }}
+        <div class="text-center mx-5">
+
+          {{ form.from_email | as_crispy_field }}
+        </div>
+        <div class="text-center mx-5">
+          {{ form.subject | as_crispy_field }}
+        </div>
+        <div class="text-center mx-5">
+          {{ form.message | as_crispy_field }}
 
 
-      </div>
+        </div>
+        <div class="form-actions mx-5">
+          <button type="submit" class="btn btn-dark rounded-0">Send</button>
+        </div>
+      </form>
     </div>
-    <div class="form-actions mx-5">
-      <button type="submit" class="btn btn-dark rounded-0">Send</button>
+    <div class="col-lg-6">
+      <div class="map-container mt-5 mb-3">
+        <div id="map"></div>
+      </div>
+      <h2 class="">Contact Information</h2>
+      <p class="mb-0">Unit 1 Spectrum Business Estate, Bircholt Road</p>
+      <p class="mb-0">Park Wood, Maidstone, Kent, ME15 7DB</p>
+      <p class="mb-0">01622 685 895</p>
+      <p class="mb-5">operations@wilson-express.co.uk</p>
     </div>
-  </form>
+
+  </div>
 </div>
 
 
 
 
+{% endblock %}
+{% block postloadjs %}
+<script
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBYr9xWqAT8jTOK1mWVtbcgaXsfN-wgHqg&callback=initMap&libraries=&v=weekly"
+  async></script>
+<script src="{% static 'contact_form/js/map.js' %}"></script>
 {% endblock %}
