--- a/contact_form/templates/contact_form/success.html
+++ b/contact_form/templates/contact_form/success.html
@@ -1,15 +1,85 @@
 {% extends "base.html" %}
 {% load static %}
-
+{% load crispy_forms_tags %}
+{% block extra_css %}
+<link rel="stylesheet" href="{% static 'checkout/css/checkout.css' %}">
+{% endblock %}
+{% block extra_js %}
+<script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+{% endblock %}
 
 {% block content %}
 <div class="overlay container"></div>
 <div class="container header-container">
   <div class="row">
-    <div class="col text-center m-5">
-      <h2 class="logo-font">Success! Thank you for your message.</h2>
+    <div class="col text-center mt-3 d-flex align-items-center flex-column">
+      <h2 class="logo-font">Contact Us</h2>
+      <hr class="w-50 mb-1">
+      <div class="col w-75 my-5 alert alert-success" role="alert">
+      <h3 class="mt-2"><span class="logo-font">Success!</span> Thank you for your message.</h3>
+    </div>
     </div>
   </div>
+  <div class="row">
 
+    <!-- Contact Form -->
+    <div class="col-lg-6">
+      <form method="POST" id="contact-form" class="mt-5">
+        {% csrf_token %}
+
+        <div class="text-center mx-5">
+
+          {{ form.from_email | as_crispy_field }}
+        </div>
+        <div class="text-center mx-5">
+          {{ form.subject | as_crispy_field }}
+        </div>
+        <div class="text-center mx-5">
+          {{ form.message | as_crispy_field }}
+
+
+        </div>
+        <div class="form-actions mx-5">
+          <button type="submit" class="btn btn-dark rounded-0">Send</button>
+        </div>
+      </form>
+    </div>
+
+    <!-- Google Map and contact info -->
+    <div class="col-lg-6">
+      <div class="map-container mt-5 mb-3">
+        <div id="map"></div>
+      </div>
+      <h2 class="">Contact Information</h2>
+      <p class="mb-0">Unit 1 Spectrum Business Estate, Bircholt Road</p>
+      <p class="mb-0">Park Wood, Maidstone, Kent, ME15 7DB</p>
+      <p class="mb-0">01622 685 895</p>
+      <p class="mb-5">operations@wilson-express.co.uk</p>
+    </div>
+
+  </div>
 </div>
+<div id="loading-overlay">
+  <h1 class="text-light logo-font loading-spinner wrapper">
+    <span class="circle circle-1"></span>
+    <span class="circle circle-2"></span>
+    <span class="circle circle-3"></span>
+    <span class="circle circle-4"></span>
+  </h1>
+</div>
+{% endblock %}
+
+{% block postloadjs %}
+<script
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBYr9xWqAT8jTOK1mWVtbcgaXsfN-wgHqg&callback=initMap&libraries=&v=weekly"
+  async></script>
+<script src="{% static 'contact_form/js/map.js' %}"></script>
+
+<script>
+  $("#contact-form").submit(function (e) {
+    $('#loading-overlay').fadeToggle(100);
+  })
+
+</script>
+
 {% endblock %}
