--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -23,7 +23,7 @@
                 <form method="POST" action="{% url 'edit_product' product.id %}" class="form mb-2" enctype="multipart/form-data">
                     {% csrf_token %}
                     {% for field in form %}
-                        {% if field.name != 'image1' or field.name != 'image2' %}
+                        {% if field.name != 'image1' and field.name != 'image2'  %}
                             {{ field | as_crispy_field }}
                         {% else %}
                             {{ field }}
@@ -43,11 +43,13 @@
 {% block postloadjs %}
     {{ block.super }}
     <script type="text/javascript">
-        $('#new-image').change(function() {
-            var file = $('#new-image')[0].files[0];
-            $('#filename').text(`Image will be set to: ${file.name}`);
-            var file1 = $('#new-image')[1].files[1];
-            $('#filename').text(`Image will be set to: ${file1.name}`);
+        $('#new-image1').change(function() {
+            var file = $('#new-image1')[0].files[0];
+            $('#filename-image1').text(`Image will be set to: ${file.name}`);
+        });
+        $('#new-image2').change(function() {
+            var file1 = $('#new-image2')[0].files[0];
+            $('#filename-image2').text(`Image will be set to: ${file1.name}`);
         });
     </script>
 {% endblock %}
