--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -6,6 +6,9 @@
   border: none;
   border-radius: 0px;
   background-color: white;
+  color: #000;
+  border-bottom: 2px solid #339244;
+  
 }
 
 .StripeElement--focus,
