--- a/faqs/templates/faqs/edit_faq.html
+++ b/faqs/templates/faqs/edit_faq.html
@@ -10,27 +10,28 @@
 <div class="container header-container">
   <div class="row">
     <div class="col text-center mt-3">
-      <h2 class="logo-font">Add FAQ</h2>
+      <h2 class="logo-font">Edit FAQ</h2>
       <hr class="w-50 mb-4">
     </div>
   </div>
   <div class="container">
     <div class="row">
       <div class="col-12 col-md-6">
-        <form method="POST" action="{% url 'add_faq' %}" class="form mb-2" enctype="multipart/form-data">
+        <form method="POST" action="{% url 'edit_faq' faq.q_id %}" class="form mb-2" enctype="multipart/form-data">
           {% csrf_token %}
           {% for field in form %}
           {{ field | as_crispy_field }}
           {% endfor %}
           <div class="text-right">
             <a class="btn btn-outline-black rounded-0" href="{% url 'faqs' %}">Cancel</a>
-            <button class="btn btn-black rounded-0" type="submit">Add Faq</button>
+            <button class="btn btn-black rounded-0" type="submit">Edit Faq</button>
           </div>
         </form>
-        
+
       </div>
 
     </div>
   </div>
 </div>
+
 {% endblock %}
