--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -24,7 +24,7 @@
                 Sending a Parcel?
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
-                <a href="#" class="dropdown-item">Open a Credit Account</a>
+                <a href="{% url 'create_account' %}" class="dropdown-item">Open a Credit Account</a>
                 <a href="#" class="dropdown-item">Send a Parcel</a>
             </div>
         </li>
