--- a/static/css/base.css
+++ b/static/css/base.css
@@ -61,14 +61,9 @@ input[type=number] {
 .rgba-black-light,
 .rgba-black-light:after,
 .rgba-black-light:before {
-  position: fixed; /* Sit on top of the page content */
+  position: absolute; /* Sit on top of the page content */
   display: block; /* Hidden by default */
   width: 100%; /* Full width (cover the whole page) */
-  height: 100%; /* Full height (cover the whole page) */
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
   background-color: #0000009c;
   z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
 }
