--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -16,18 +16,57 @@
 </div>
 {% endblock %}
 {% block content %}
+
 <div class="rgba-black-light">
-  <div class="container h-100">
-    <div class="row h-100 header-container">
-      <div class="col-12 col-lg-8">
+  <div class="container header-container">
+    <div class="row">
+      <div class="col-12 col-lg-8 mt-5">
         <h1 class="text-white text-center text-lg-left">
           Wilson's Express Sameday Ltd
         </h1>
         <h2 class="text-white display-4 mb-5 text-center text-lg-left">Specialists in Sameday, Next Day and
           International
           Deliveries!</h2>
-        <hr class="separator w-100">
-        <div class="my-5">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12">
+
+        <form method="POST" class="form mb-2 p-3 bg-white" enctype="multipart/form-data">
+          {% csrf_token %}
+          <h2 class="p-3">Request a Quote</h2>
+          <div class="container">
+            <div class="row ">
+              <div class="col-12 col-md-6">
+                {{ quote_form.c_postcode | as_crispy_field }}
+              </div>
+              <div class="col-12 col-md-6">
+                {{ quote_form.d_postcode | as_crispy_field }}
+              </div>
+            </div>
+            <div class="row ">
+              <div class="col-3">
+                {{ quote_form.weight | as_crispy_field }}
+              </div>
+              <div class="col-3">
+                {{ quote_form.height | as_crispy_field }}
+              </div>
+              <div class="col-3">
+                {{ quote_form.length | as_crispy_field }}
+              </div>
+              <div class="col-3">
+                {{ quote_form.width | as_crispy_field }}
+              </div>
+
+            </div>
+          </div>
+          <div class="text-right">
+            <button class="btn-dark btn btn-md rounded-0" type="submit">Get Quote!</button>
+          </div>
+        </form>
+      </div>
+      <div class="col-12 col-lg-8">
+        <div class="">
           <h3 class="text-white">Need to send a parcel? Open a credit account? We can help!</h3>
           <h4>
             <a href="#" class="home-buttons btn btn-md rounder-0 text-uppercase py-2 text-white">Send a
@@ -43,22 +82,8 @@
             <a href="{% url 'store_home' %}"
               class="home-buttons btn btn-md rounder-0 text-uppercase py-2 text-white">Store</a>
           </h4>
-          <div class="row">
-            <div class="col-12 col-md-6">
-              <form method="POST" class="form mb-2" enctype="multipart/form-data">
-                {% csrf_token %}
-                {% for field in quote_form %}
-                
-                {{ field | as_crispy_field }}
-                
-                {% endfor %}
-                <div class="text-right">
-                  <button class="home-buttons btn btn-md rounded-0" type="submit">Get Quote!</button>
-                </div>
-              </form>
-            </div>
-          </div>
-          
+
+
         </div>
       </div>
     </div>
